# EPFL_ROS_Practicals_Project

./: .gitignore  readme.md
results_from_bag/: plot_traj_comp.m
results_from_bag/real/thymio_real_with_obstacle_avoidance/: h0_data.csv  h1_data.csv  h2_data.csv  h3_data.csv  h4_data.csv  timestamp_data.csv  yaw_data.csv
results_from_bag/real/thymio_real_without_obstacle/: h0_data.csv  h1_data.csv  h2_data.csv  h3_data.csv  h4_data.csv  timestamp_data.csv  x_data.csv  y_data.csv  yaw_data.csv
results_from_bag/simu/thymio_simulation_navigation_with_obstacle_avoidance/: h0_data.csv  h1_data.csv  h2_data.csv  h3_data.csv  h4_data.csv  timestamp_data.csv  x_data.csv  y_data.csv  yaw_data.csv
src/ros_basics_control/: .gitignore  CMakeLists.txt  package.xml
src/ros_basics_control/include/ros_basics_control/: controller_base.hpp  gazebo_robot_tracker.h  robot_tracker.h  thymio.hpp  thymio_interface_base.h  thymio_simu_interface.h
src/ros_basics_control/launch/: real_thymio.launch  simu_thymio.launch
src/ros_basics_control/src/: gazebo_robot_tracker.cpp  robot_tracker.cpp  thymio_ctrl_node.cpp  thymio_interface_base.cpp  thymio_intf_node.py  thymio_simu_interface.cpp
src/ros_basics_exercise/: .gitignore  CMakeLists.txt  package.xml  path_to_follow.py
src/ros_basics_exercise/cfg/: ThymioController.cfg
src/ros_basics_exercise/include/ros_basics_exercise/: pid_controller.hpp
src/ros_basics_exercise/launch/: set_simu_waypoints_obstacle.launch  thymio_ctrl_cli.launch  thymio_gazebo.launch  thymio_simple_gazebo.launch  thymio_simple_rviz.launch  tune_with_rqt.launch  view_with_rosbag.launch
src/ros_basics_exercise/models/: ros_basics_lego_block.urdf
src/ros_basics_exercise/rosbags/: readme.md
src/ros_basics_exercise/src/: thymio_control_node.cpp  thymio_control_pnode_real.py  thymio_control_pnode_simu.py  topic_reader.py
src/ros_basics_exercise/urdf/: Thymio.dae  thymio_simple.gazebo  thymio_simple.urdf.xacro
src/ros_basics_models/: CMakeLists.txt  package.xml
src/ros_basics_models/launch/: ball_gazebo.launch  football_scenario.launch  logi_c615_gazebo.launch  setup_gazebo.launch  setup_gazebo_larger.launch
src/ros_basics_models/urdf/: ball.urdf.xacro  logi_c615.urdf.xacro  setup.urdf.xacro  setup_larger.urdf.xacro
src/ros_basics_models/urdf/utils/: custom_sensors.xacro  inertia.xacro  materials.xacro
src/ros_basics_msgs/: CMakeLists.txt  package.xml
src/ros_basics_msgs/msg/: ProximitySensors.msg  SimplePose.msg  SimplePoseStamped.msg
src/ros_basics_msgs/srv/: AddWaypoint.srv  CheckWaypointReached.srv  CurrentWaypoint.srv  GetWaypoints.srv  RemoveWaypoint.srv  SetWaypoints.srv
src/ros_basics_vision/: .gitignore  CMakeLists.txt  Readme.md  package.xml  requirements.txt
src/ros_basics_vision/calibration/: calibrate_camera.py  capture_calibration_pictures.py
src/ros_basics_vision/config/: thymio_tracking_params.yaml  thymio_tracking_params_real.yaml
src/ros_basics_vision/examples/: adaptive_gamma_example.cpp  aruco_detector_example.cpp  ball_detector_example.cpp  setup_detector_example.cpp
src/ros_basics_vision/include/ros_basics_vision/: adaptive_gamma.h  aruco_detector.h  ball_detector.h  frame_info.hpp  setup_detector.h
src/ros_basics_vision/launch/: thymio_simu_vis.launch  thymio_tracker.launch
src/ros_basics_vision/src/: adaptive_gamma.cpp  aruco_detector.cpp  ball_detector.cpp  setup_detector.cpp  thymio_simu_tracking_node.cpp  thymio_tracking_node.cpp
