<?xml version="1.0"?>
<package format="2">
  <name>ros_basics_models</name>

  <version>0.1.0</version>
  <description>Basic models for the ROS TP</description>
  <maintainer email="b.papaspyros@gmail.com">Vaios Papaspyros</maintainer>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

</package>
